Upgrade to Java 11 (#200)
* Upgrade to Java 11

* Update tools-versions to java 11

* Removing unsupported (and hopefully unnecessary) JVM options